Now the path to open shapefile is relative

--- a/notebooks/0.0_map.Rmd
+++ b/notebooks/0.0_map.Rmd
@@ -27,17 +27,15 @@ source("./src/0.0_great-speciators_source.R")
 sp0 <- sf::st_read(dsn = file.path(data_path,"map/All_Species_Resident_1.shp"))
 sp1 <- sf::st_read(dsn = file.path(data_path,"map/All_Species_Resident_1.1.shp"))
 sp1.1 <- sf::st_read(dsn = file.path(data_path,"map/All_Species_Resident_1.2.shp"))
-sp1.2 <- sf::st_read(dsn = "/home/estandia/Documents/projects/0.0_great-speciators/data/raw/map/All_Species_Resident_3.shp")
-sp1.3 <- sf::st_read(dsn = "/home/estandia/Documents/projects/0.0_great-speciators/data/raw/map/All_Species_Resident_4.shp")
-sp1.4 <- sf::st_read(dsn = "/home/estandia/Documents/projects/0.0_great-speciators/data/raw/map/All_Species_Resident_5.shp")
-sp2 <- sf::st_read(dsn = "/home/estandia/Documents/projects/0.0_great-speciators/data/raw/map/All_Species_Breeding.shp")
-sp3 <- sf::st_read(dsn = "/home/estandia/Documents/projects/0.0_great-speciators/data/raw/map/All_Species_NonBreeding.shp")
+sp1.2 <- sf::st_read(dsn = file.path(data_path,"map/All_Species_Resident_3.shp"))
+sp1.3 <- sf::st_read(dsn = file.path(data_path,"/map/All_Species_Resident_4.shp"))
+sp1.4 <- sf::st_read(dsn = file.path(data_path,"map/All_Species_Resident_5.shp"))
+sp2 <- sf::st_read(dsn = file.path(data_path,"map/All_Species_Breeding.shp"))
+sp3 <- sf::st_read(dsn = file.path(data_path,"map/All_Species_NonBreeding.shp"))
 #Land is a shapefile where every closed polygon is an island (e.g. Eurasia would be an island, Efate too, just different sizes) 
 land <- sf::st_read(dsn = file.path(data_path,"/map/everythingisanisland.shp"))
-southpacific <- sf::st_read(dsn = "/home/estandia/Documents/projects/0.0_great-speciators/data/raw/map/southpacific.shp")
-australasia <- sf::st_read(dsn = "/home/estandia/Documents/projects/0.0_great-speciators/data/raw/map/australasia.shp")
+australasia <- sf::st_read(dsn = file.path(data_path,"map/australasia.shp"))
 melanesia <- sf::st_read(dsn = file.path(data_path,"map/melanesia.shp"))
-passerina <- sf::st_read(dsn = "/home/zoo/sjoh4959/passerina.shp")
 
 ```
 
