--- a/notebooks/0.0_subspecies-subsetting.Rmd
+++ b/notebooks/0.0_subspecies-subsetting.Rmd
@@ -35,25 +35,35 @@ gs_candidates <- checklist %>%
   filter(category == "subspecies") %>% 
   mutate(occurrences = n()) 
 
-melanesia <- read_csv(file.path(data_path,"nsubsp_melanesia.csv")) %>% 
+melanesia <- read_csv(file.path(data_path,"melanesia.csv")) %>% 
   filter(northern_melanesia == 1) %>% 
-  filter(category!="group (polytipic)") %>% 
+  filter(category!="group (polytypic)") %>% 
   group_by(species_name,category) %>% 
   filter(category == "subspecies") %>% 
   mutate(occurrences = n()) %>% 
-  mutate(distr_index_final =  occurrences*log10(distr_index)) %>% 
+  filter(occurrences>1) %>% 
+  mutate(distr_index_final =  occurrences*distr_index_abs) %>% 
   arrange(desc(distr_index_final)) 
 
-australasia <- read_csv(file.path(data_path,"nsubsp_australasia.csv")) %>% 
+australasia <- read_csv(file.path(data_path,"australasia.csv")) %>% 
   filter(australasia == 1) %>% 
-  filter(category!="group (polytipic)") %>% 
+  filter(category!="group (polytypic)") %>% 
   group_by(species_name,category) %>% 
   filter(category == "subspecies") %>% 
   mutate(occurrences = n()) %>% 
-  mutate(distr_index_final = occurrences*log10(distr_index)) %>% 
+  filter(occurrences>1) %>% 
+  mutate(distr_index_final = occurrences*distr_index_abs) %>% 
   arrange(desc(distr_index_final))
 
+#p <- full_join(melanesia1, melanesia_resident, melanesia_breeding, by="species_name")
+#q <- full_join(australasia1, australasia_resident, australasia_breeding, by="species_name")
+
+#write.csv(p,"melanesia.csv", row.names = F)
+#write.csv(world,"world.csv", row.names = F)
 tip_rates <- read_csv(file.path(data_path,"tiprates.csv")) %>% separate(species_name, c("genus", "species")) %>% unite(species_name, c("genus", "species"), sep=" ") 
+
+iucn <- read_csv(file.path(data_path,"Handbook of the Birds of the World and BirdLife International digital checklist of the birds of the world_Version_4.csv"))
+
 ```
 
 ## Open trait datasets and merge them with the checklist file.
@@ -69,84 +79,693 @@ traits2 <- read_csv(file.path(data_path,"TetraDENSITY_v.1.csv")) %>%
   unite(species_name, c("genus", "species"), sep=" ") %>% 
   filter(class=="Aves")
 
-world <- read_csv(file.path(data_path, "distr_index_total.csv")) 
+world <- read_csv(file.path(data_path, "world.csv")) 
 
 dataset_world <- left_join(gs_candidates, hwi, by = "species_name") %>% 
   ungroup() %>% 
   left_join(traits1, by = "species_name") %>% 
   left_join(traits2, by = "species_name") %>%
   left_join(world, by = "species_name") %>%
-  left_join(tip_rates, by="species_name") %>% 
+  left_join(iucn, by="species_name") %>% 
+  filter(occurrences>1) %>% 
   mutate(distr_index_final = occurrences*distr_index) %>% 
   drop_na(distr_index_final) %>% 
   clean_names() %>%
-  distinct(sort_v2019, .keep_all = TRUE) %>% 
-  filter(!(order_x %in% c("Procellariiformes", "Suliformes", "Charadriiformes"))) 
+  distinct(sort_v2019, .keep_all = TRUE)# %>% 
+  #filter(!(order_x %in% c("Procellariiformes", "Suliformes", "Charadriiformes"))) 
     
 dataset_australasia <- left_join(gs_candidates, hwi, by = "species_name") %>% 
   ungroup() %>% 
   left_join(traits1, by = "species_name") %>% 
   left_join(traits2, by = "species_name") %>%
   left_join(australasia, by = "species_name") %>%
-  left_join(tip_rates, by="species_name") %>% 
+  left_join(iucn, by="species_name") %>% 
   drop_na(distr_index_final) %>% 
   clean_names() %>% 
-  distinct(sort_v2019, .keep_all = TRUE) %>% 
-  filter(!(order_x %in% c("Procellariiformes", "Suliformes", "Charadriiformes"))) 
+  distinct(sort_v2019, .keep_all = TRUE) #%>% 
+ # filter(!(order_x %in% c("Procellariiformes", "Suliformes", "Charadriiformes"))) 
 
 dataset_melanesia <- left_join(gs_candidates, hwi, by = "species_name") %>% 
   ungroup() %>% 
   left_join(traits1, by = "species_name") %>% 
   left_join(traits2, by = "species_name") %>%
   left_join(melanesia, by = "species_name") %>%
-  left_join(tip_rates, by="species_name") %>% 
+  left_join(iucn, by="species_name") %>% 
   drop_na(distr_index_final) %>% 
   clean_names() %>% 
-  distinct(sort_v2019, .keep_all = TRUE) %>% 
-  filter(!(order_x %in% c("Procellariiformes", "Suliformes", "Charadriiformes"))) 
+  distinct(sort_v2019, .keep_all = TRUE) #%>% 
+  #filter(!(order_x %in% c("Procellariiformes", "Suliformes", "Charadriiformes"))) 
 ```
 
 ## Create plots 
 ```{r}
-plot_australasia <- dataset_melanesia %>%
+plot_australasia <- dataset_australasia %>%
   filter(distr_index_final!="NA") %>% 
   arrange(desc(distr_index_final)) %>% 
   #filter(occurrences_y > 2) %>%
   #filter(species_name!="Alcedo atthis") %>% 
-  #top_n(900, distr_index_final) %>% 
+  top_n(380, distr_index_final) %>% 
+  ggplot(aes(
+    x = fct_reorder(species_name, distr_index_final),
+    y = distr_index_final
+    #size=occurrences_y,
+    #color=distr_index
+  )) +
+  geom_point(col="#3ea6c2", size=2.5)+
+  scale_color_brewer(palette="Dark2")+
+  #geom_jitter(alpha = 0.2) +
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + gghighlight(species_name==c("Tyto alba","Butorides striata","Sula dactylatra"))+
+  guides(colour = guide_legend(title="Area (km2)"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\n", title = "Australasia")
+
+
+plot_melanesia<- dataset_melanesia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  #filter(occurrences_y > 2) %>%
+  #filter(species_name!="Alcedo atthis") %>% 
+  top_n(250, distr_index_final) %>% 
   ggplot(aes(
     x = fct_reorder(species_name, distr_index_final),
     y = distr_index_final,
     #size=occurrences_y,
     #color=distr_index
   )) +
-  geom_point()+
-  scale_colour_viridis()+
+  geom_point(col="#3ea6c2", size=2.5)+
+  scale_color_brewer(palette="Dark2")+
   #geom_jitter(alpha = 0.2) +
   theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + gghighlight(species_name==c("Alcedo atthis","Butorides striata", "Sula dactylatra"))+
+  guides(colour = guide_legend(title="Area (km2)"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\nSpecies", title = "Northern Melanesia")
+
+plot_world <-  dataset_world %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  top_n(500, distr_index_final) %>% 
+  ggplot(aes(
+    x = fct_reorder(species_name, distr_index_final),
+    y = distr_index_final,
+    col=occurrences
+  )) +
+  geom_point(col="#3ea6c2", size=2.5)+
+  scale_color_brewer(palette="Dark2")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Area (km2)"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\n", title = "World\n")
+
+
+plot1 <- plot_world+plot_australasia+plot_melanesia+plot_layout(ncol=1)+plot_annotation(tag_levels = 'A')
+
+ggsave(
+  plot = plot_australasia,
+  filename = "plot_australasia.png",
+  path = figures_path,
+  device = "png",
+  scale=1,
+  width = 35,
+  height = 15,
+  dpi = 400,
+  units = "cm"
+)
+
+continuous_world <- dataset_world %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  #filter(occurrences_y > 2) %>%
+  #filter(species_name!="Alcedo atthis") %>% 
+  #top_n(380, distr_index_final) %>% 
+  ggplot(aes(
+    x = fct_reorder(species_name, distr_index_final),
+    y = distr_index_final,
+    #size=occurrences,
+    #color=distr_index
+  )) +
+  geom_jitter(col="#666666", alpha=0.2)+
+  #geom_jitter(alpha = 0.2) +
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
     panel.grid.major = element_blank(),
     panel.grid.minor = element_blank(),
     axis.ticks.x = element_blank(),
     axis.text.x = element_blank(),
-    #axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "bold"),
+    #axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
     axis.ticks.y = element_blank()
   ) + 
-  guides(colour = guide_legend(title="Area (km2)", size=text_size), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great speciator index\n", x= "\nSpecies", size= text_size, title = "Northern Melanesia", face= "bold")
+  guides(colour = guide_legend(title="Area (km2)"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\n", title = "World")
+
+continuous_australasia <- dataset_australasia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  #filter(occurrences_y > 2) %>%
+  #filter(species_name!="Alcedo atthis") %>% 
+  #top_n(380, distr_index_final) %>% 
+  ggplot(aes(
+    x = fct_reorder(species_name, distr_index_final),
+    y = distr_index_final,
+    #size=occurrences_y,
+    #color=distr_index
+  )) +
+  geom_point(col="#666666")+
+  #geom_jitter(alpha = 0.2) +
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    #axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Area (km2)"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\n", title = "Australasia")
 
 
-plot1 <- plot_world+ plot_australasia+plot_melanesia+plot_layout(ncol=1)+plot_annotation(tag_levels = 'A')
+great_speciator_list <- c("Accipiter hiogaster","Gallirallus philippensis","Ptilinopus rivoli","Micropsitta pusio",
+                                  "Collocalia esculenta", "Todiramphus chloris", "Erythropitta novaehibernicae",
+                                  "Coracina lineata", "Edolisoma tenuirostre", "Lalage leucomela", "Zoothera heinei",
+                                  "Turdus poliocephalus", "Phylloscopus maforensis", "Rhipidura rufifrons", "Petroica pusilla",
+                                  "Zosterops griseotinctus", "Pachycephala pectoralis", "Myzomela cruentata", "Myzomela lafargei",
+                                  "Lonchura spectabilis", "Dicrurus bracteatus", "Carterornis chrysomela", "Symposiachrus browni")
+
+great_speciators <- dataset_melanesia %>% filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% filter(species_name %in% great_speciator_list)
+
+continuous_melanesia <- dataset_melanesia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  ggplot(aes(
+    x = fct_reorder(species_name, distr_index_final),
+    y = distr_index_final,
+  )) +
+  geom_point(col="#666666")+
+  geom_point(data=great_speciators, aes(x = fct_reorder(species_name, distr_index_final),
+    y = distr_index_final, col=""))+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\nSpecies", title = "Northern Melanesia")
+
+plot_continuous <- continuous_world+continuous_australasia+continuous_melanesia+plot_layout(ncol=1)+plot_annotation(tag_levels = 'A')
 
 ggsave(
-  plot = plot1,
-  filename = "plot.pdf",
+  plot = plot_continuous,
+  filename = "plot_continuous.png",
   path = figures_path,
-  device = "pdf",
+  device = "png",
   scale=1,
-  width = 24,
-  height = 45,
+  width = 20,
+  height = 25,
   dpi = 400,
   units = "cm"
 )
+
+iucn_australasia <- dataset_australasia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(iucn != "NA") %>% 
+  #filter(occurrences_y > 2) %>%
+  #filter(species_name!="Alcedo atthis") %>% 
+  #top_n(250, distr_index_final) %>% 
+  ggplot(aes(
+    x = fct_reorder(iucn, sort_v2019),
+    y = distr_index_final,
+    #size=occurrences_y,
+    color=iucn,
+    fill=iucn
+  )) +
+  geom_dotplot(
+    binaxis = 'y',
+    stackdir = 'center',
+    binwidth = 0.5,
+    dotsize = 10
+  ) +
+  #scale_color_brewer(palette="Dark2")+
+  #geom_jitter(alpha = 0.2) +
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    #axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\n", title = "Australasia")
+
+iucn_melanesia <- dataset_melanesia %>%
+  filter(distr_index_final!="NA") %>% 
+  filter(iucn != "NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  #filter(occurrences_y > 2) %>%
+  #filter(species_name!="Alcedo atthis") %>% 
+  #top_n(250, distr_index_final) %>% 
+  ggplot(aes(
+    x = fct_reorder(iucn, distr_index_abs),
+    y = distr_index_final,
+    #size=occurrences_y,
+    color=iucn,
+    fill=iucn
+  )) +
+  geom_dotplot(
+    binaxis = 'y',
+    stackdir = 'center',
+    binwidth = 0.5,
+    dotsize = 10
+  ) +
+  #geom_jitter(alpha = 0.2) +
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    #axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\nSpecies", title = "Northern Melanesia")
+
+iucn_world <- dataset_world %>%
+  filter(distr_index_final!="NA") %>% 
+  filter(iucn != "NA") %>% 
+  filter(iucn != "CR (PE)") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  #filter(occurrences_y > 2) %>%
+  #filter(species_name!="Alcedo atthis") %>% 
+  #top_n(250, distr_index_final) %>% 
+  ggplot(aes(
+    x = fct_reorder(iucn, sort_v2019),
+    y = distr_index_final,
+    #size=occurrences_y,
+    color=iucn,
+    fill=iucn
+  )) +
+  geom_dotplot(
+    binaxis = 'y',
+    stackdir = 'center',
+    binwidth = 0.5,
+    dotsize = 15
+  ) +
+  #scale_color_brewer(palette="Dark2")+
+  #geom_jitter(alpha = 0.2) +
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    #axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\n", title = "World")
+
+plot_iucn <- iucn_world + iucn_australasia + iucn_melanesia + plot_layout(ncol=1)+plot_annotation(tag_levels = 'A')
+
+ggsave(
+  plot = plot_iucn,
+  filename = "plot_iucn.png",
+  path = figures_path,
+  device = "png",
+  scale=1,
+  width = 20,
+  height = 25,
+  dpi = 400,
+  units = "cm"
+)
+
+colourCount = length(unique(dataset_world$order_x))
+getPalette = colorRampPalette(brewer.pal(36, "Dark2"))
+colours <- c("#897932", "#C8611F", "#8D6B86", "#9B58A5", "#DD2E8D", "#A66753", "#70A61B", "#BBA90B","#1B9E77", "#D59D08", "#B07E18", "#8B6F3B", "#666666")
+
+hwi_gs <- dataset_world %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  distinct(species_name, .keep_all = TRUE)  %>% 
+  ggplot(aes(
+    x = fct_reorder(order_x, hwi),
+    y = hwi,
+    size=distr_index_final
+  )) +
+  geom_jitter(alpha=0.7, color="#2985a3", width=0.1)+
+  geom_hline(yintercept=24.6, linetype="dashed", col= "darkgrey")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_text(size= text_size, angle = 45, vjust = 0.9,hjust=1, face= "italic", family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.position = "none",
+    axis.ticks.y = element_blank()
+  ) + gghighlight(distr_index_final>5000)+
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "HWI\n", x= "\n", title = "")
+
+hwi_hist_total <- dataset_world %>%
+  ggplot(aes(
+    x = hwi
+  )) +
+  geom_histogram(binwidth=3, alpha=0.9, color="#e9ecef") + theme_minimal() + labs(y = "\n", x= "\nHWI", title = "Aves\n")
+
+hwi_hist_pass <- dataset_world %>% filter(order_x=="Passeriformes") %>% 
+  ggplot(aes(
+    x = hwi
+  )) +
+  geom_histogram(binwidth=3, alpha=0.9, color="#e9ecef") + theme_minimal() + labs(y = "\n", x= "\nHWI", title = "Passeriformes\n")
+
+hwi_hist_cap <- dataset_world %>% filter(order_x=="Caprimulgiformes") %>% 
+  ggplot(aes(
+    x = hwi
+  )) +
+  geom_histogram(binwidth=3, alpha=0.9, color="#e9ecef") + theme_minimal() + labs(y = "\n", x= "\nHWI", title = "Caprimulgiformes\n")
+
+hwi2 <- hwi_hist_total / (hwi_hist_pass | hwi_hist_cap) 
+
+ggplot(dataset_world, aes(fill=distr_index_final, y=value, x=order_x)) + 
+    geom_bar(position="fill", stat="identity")
+
+ggsave(
+  plot = hwi_gs,
+  filename = "hwi_gs.png",
+  path = figures_path,
+  device = "png",
+  scale=1,
+  width = 20,
+  height = 15,
+  dpi = 400,
+  units = "cm"
+)
+
+hwi_gs_world <- dataset_world %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(distr_index_final!=0) %>% 
+  ggplot(aes(
+    x = hwi,
+    y = log(distr_index_final)
+  )) +
+  geom_jitter(col="#634c6e",alpha=0.3)+
+  geom_smooth(method="loess", col="black", se=FALSE)+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\nHWI", title = "World")
+
+hwi_gs_australasia <- dataset_australasia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(distr_index_final!=0) %>% 
+  ggplot(aes(
+    x = hwi,
+    y = log(distr_index_final)
+  )) +
+  geom_jitter(col="#634c6e",alpha=0.3)+
+  geom_smooth(method = "lm", formula = y ~ x + I(x^2), size = 1, color="black")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "\n", x= "\nHWI", title = "Australasia")
+
+hwi_gs_melanesia <- dataset_melanesia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  ggplot(aes(
+    x = hwi,
+    y = log(distr_index_final)
+  )) +
+  geom_jitter(col="#634c6e",alpha=0.3)+
+  geom_smooth(method = "lm", formula = y ~ x + I(x^2), size = 1, color="black")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "\n", x= "\nHWI", title = "Northern Melanesia")
+
+plot_hwi_gr <- hwi_gs_world+hwi_gs_australasia+hwi_gs_melanesia
+
+netdiv_gs_world <- dataset_world %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(distr_index_final!=0) %>% 
+  ggplot(aes(
+    x = log(netdiv),
+    y = log(distr_index_final)
+  )) +
+  geom_jitter(col="#5588a3",alpha=0.3)+
+  geom_smooth(method="loess", col="black")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\nNet diversification rate", title = "World")
+
+netdiv_gs_australasia <- dataset_australasia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(distr_index_final!=0) %>% 
+  ggplot(aes(
+    x = log(netdiv),
+    y = log(distr_index_final)
+  )) +
+  geom_jitter(col="#5588a3",alpha=0.3)+
+  geom_smooth(method = "lm", formula = y ~ x + I(x^2), size = 1, color="black")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "\n", x= "\nNet diversification rate", title = "Australasia")
+
+netdiv_gs_melanesia <- dataset_melanesia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  ggplot(aes(
+    x = log(netdiv),
+    y = log(distr_index_final)
+  )) +
+  geom_jitter(col="#5588a3",alpha=0.3)+
+  geom_smooth(method = "lm", formula = y ~ x + I(x^2), size = 1, color="black")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "\n", x= "\nNet diversification rate", title = "Northern Melanesia")
+
+plot_netdiv_gr <- (hwi_gs_world|hwi_gs_australasia|hwi_gs_melanesia) / (netdiv_gs_world|netdiv_gs_australasia|netdiv_gs_melanesia)
+
+ggsave(
+  plot = plot_netdiv_gr,
+  filename = "plot_variables_gs.png",
+  path = figures_path,
+  device = "png",
+  scale=1,
+  width = 30,
+  height = 15,
+  dpi = 400,
+  units = "cm"
+)
+
+
+dataset_australasia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(distr_index_final!=0) %>% 
+  ggplot(aes(
+    x = hwi,
+    y = log(distr_index_final),
+    col=order_x
+  )) +
+  geom_point()+
+  geom_smooth(method=lm) + 
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Great Speciator Index\n", x= "\nHWI", title = "Australasia")
+
+spline_australasia <- dataset_australasia %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(distr_index_final!=0) %>% 
+  ggplot(aes(
+    x = hwi,
+    y = netdiv,
+    #color=order_x,
+    size=distr_index_final
+  )) + 
+  geom_jitter(alpha=0.2, col="#027eab")+geom_smooth(method = "lm", formula = y ~ x + I(x^2), size = 1, color="black")+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    #axis.text.x = element_blank(),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.position = "none",
+    axis.ticks.y = element_blank()
+  )  + labs(y = "\n", x= "\nHWI", title = "Australasia")
+
+plot_spline <- spline_world+spline_australasia+spline_melanesia+plot_layout(nrow=1)+plot_annotation(tag_levels = 'A')
+
+ggsave(
+  plot = plot_subsp_netdiv,
+  filename = "plot_subsp_netdiv.png",
+  path = figures_path,
+  device = "png",
+  scale=1,
+  width = 15,
+  height = 15,
+  dpi = 400,
+  units = "cm"
+)
+
+
+plot_subsp_netdiv <- dataset_world %>%
+  filter(distr_index_final!="NA") %>% 
+  arrange(desc(distr_index_final)) %>% 
+  filter(distr_index_final!=0) %>% 
+  distinct(species_name, .keep_all = TRUE)  %>% 
+  ggplot(aes(
+    x = netdiv,
+    y = occurrences
+  )) +
+  geom_jitter(col="#6591a3",alpha=0.3)+
+  theme(
+    plot.title = element_text(family = "Ubuntu", size=text_size),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.text.x = element_text(family="Ubuntu"),
+    axis.text.y = element_text(family="Ubuntu"),
+    axis.title.x = element_text(family="Ubuntu"),
+    axis.title.y = element_text(family="Ubuntu"),
+    legend.title = element_text(family="Ubuntu"),
+    axis.ticks.y = element_blank()
+  ) + 
+  guides(colour = guide_legend(title="Original great speciators"), size = guide_legend(title="Number of subspecies",  size=text_size)) + labs(y = "Number of subspecies\n", x= "\nNet diversification rate", title = "")
+```
+
+```{r}
+dataset_world2 <- dataset_world %>%  mutate(hwi, hwi2 = hwi^2)
+model1 <- brm(netdiv~1+hwi+I(hwi^2), data=dataset_world2)
+dataset_model2 <- dataset_world %>% mutate(log_gs=log10(distr_index_final)) %>% filter(log_gs>=0)
+model2 <- brm(log_gs~1+hwi+(1+hwi|order_x), data=dataset_model2, control = list(adapt_delta = 0.99))
+
+dataset_model2 %>% 
+  add_residual_draws(model2) %>%
+  ggplot(aes(x = .row, y = .residual)) +
+  stat_pointinterval()
 ```
 
 checklist_spcomplex <- read_csv(file.path(data_path,"Clements-Checklist-v2019-August-2019.csv")) %>%  
